WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304944
PlatformSpeechSynthesizer::initializeVoiceList() should not block
https://bugs.webkit.org/show_bug.cgi?id=304944
Summary
PlatformSpeechSynthesizer::initializeVoiceList() should not block
Dominic Mazzoni
Reported
2026-01-05 10:30:12 PST
Right now it sometimes fails to return, we should use a nonblocking call instead.
Attachments
Add attachment
proposed patch, testcase, etc.
Dominic Mazzoni
Comment 1
2026-01-05 19:08:13 PST
rdar://164447645
Dominic Mazzoni
Comment 2
2026-01-05 19:20:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56122
EWS
Comment 3
2026-01-13 20:12:02 PST
Committed
305553@main
(92ee2ee16c0c): <
https://commits.webkit.org/305553@main
> Reviewed commits have been landed. Closing PR #56122 and removing active labels.
WebKit Commit Bot
Comment 4
2026-01-13 22:22:18 PST
Re-opened since this is blocked by
bug 305453
Dominic Mazzoni
Comment 5
2026-01-14 14:23:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56589
EWS
Comment 6
2026-01-15 14:42:03 PST
Committed
305673@main
(0845cdb9f9cd): <
https://commits.webkit.org/305673@main
> Reviewed commits have been landed. Closing PR #56589 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug