Cherry-pick 92ee2ee16c0c. rdar://168363254

PlatformSpeechSynthesizer::initializeVoiceList() should not block on macOS
    https://bugs.webkit.org/show_bug.cgi?id=304944
    rdar://164447645

    Reviewed by Darin Adler and Tyler Wilcock.

    Uses a new asynchronous variant of the internal method to fetch the voice list.

    * LayoutTests/fast/speechsynthesis/speech-synthesis-empty-initial-voice-list-expected.txt: Added.
    * LayoutTests/fast/speechsynthesis/speech-synthesis-empty-initial-voice-list.html: Added.
    * LayoutTests/fast/speechsynthesis/voices-non-mock.html:
    * Source/WebCore/Configurations/AllowedSPI-legacy.toml:
    * Source/WebCore/PAL/pal/spi/cocoa/AXSpeechManagerSPI.h:
    * Source/WebCore/platform/cocoa/PlatformSpeechSynthesizerCocoa.mm:
    (WebCore::PlatformSpeechSynthesizer::initializeVoiceList):
    * Source/WebCore/platform/mock/PlatformSpeechSynthesizerMock.cpp:
    (WebCore::PlatformSpeechSynthesizerMock::initializeVoiceList):
    * Source/WebCore/platform/mock/PlatformSpeechSynthesizerMock.h:
    (WebCore::PlatformSpeechSynthesizerMock::setInitialVoiceListToEmpty):
    * Source/WebCore/testing/Internals.cpp:
    (WebCore::Internals::simulateSpeechSynthesizerVoiceListChange):
    (WebCore::Internals::setInitialVoiceListToEmpty):
    * Source/WebCore/testing/Internals.h:
    * Source/WebCore/testing/Internals.idl:

    Canonical link: https://commits.webkit.org/305553@main

Cherry-pick 0845cdb9f9cd. rdar://168363254

    PlatformSpeechSynthesizer::initializeVoiceList() should not block
    https://bugs.webkit.org/show_bug.cgi?id=304944
    rdar://164447645

    Reviewed by Tyler Wilcock.

    Uses a new asynchronous variant of the internal method to fetch the voice list.
    Originally merged as 305553@main, but reverted because it did not build on older SDKs.
    Updated to forward-declare the new method; it already did a respondsToSelector check.

    Test: fast/speechsynthesis/speech-synthesis-empty-initial-voice-list.html

    * LayoutTests/fast/speechsynthesis/speech-synthesis-empty-initial-voice-list-expected.txt: Added.
    * LayoutTests/fast/speechsynthesis/speech-synthesis-empty-initial-voice-list.html: Added.
    * LayoutTests/fast/speechsynthesis/voices-non-mock.html:
    * Source/WebCore/Configurations/AllowedSPI-legacy.toml:
    * Source/WebCore/PAL/pal/spi/cocoa/AXSpeechManagerSPI.h:
    * Source/WebCore/platform/cocoa/PlatformSpeechSynthesizerCocoa.mm:
    (WebCore::PlatformSpeechSynthesizer::initializeVoiceList):
    * Source/WebCore/platform/mock/PlatformSpeechSynthesizerMock.cpp:
    (WebCore::PlatformSpeechSynthesizerMock::initializeVoiceList):
    * Source/WebCore/platform/mock/PlatformSpeechSynthesizerMock.h:
    (WebCore::PlatformSpeechSynthesizerMock::setInitialVoiceListToEmpty):
    * Source/WebCore/testing/Internals.cpp:
    (WebCore::Internals::simulateSpeechSynthesizerVoiceListChange):
    (WebCore::Internals::setInitialVoiceListToEmpty):
    * Source/WebCore/testing/Internals.h:
    * Source/WebCore/testing/Internals.idl:

    Canonical link: https://commits.webkit.org/305673@main

Identifier: 305413.172@safari-7624-branch