Source/WebCore/platform/mock/PlatformSpeechSynthesizerMock.cpp
@@ -55,6 +55,8 @@ void PlatformSpeechSynthesizerMock::speakingFinished()
 
 void PlatformSpeechSynthesizerMock::initializeVoiceList()
 {
+    if (m_initialVoiceListShouldBeEmpty)
+        return;
     m_voiceList.append(PlatformSpeechSynthesisVoice::create("mock.voice.bruce"_s, "bruce"_s, "en-US"_s, true, true));
     m_voiceList.append(PlatformSpeechSynthesisVoice::create("mock.voice.clark"_s, "clark"_s, "en-US"_s, true, false));
     m_voiceList.append(PlatformSpeechSynthesisVoice::create("mock.voice.logan"_s, "logan"_s, "fr-CA"_s, true, true));
